# Navigation-robot-project

./: README.md  project documentation.docx  project presentation.pptx
devel/: _setup_util.py  local_setup.sh  setup.sh
devel/lib/commander/: navigation_robot_viz
devel/lib/pkgconfig/: commander.pc  simulation_environment.pc
devel/share/commander/cmake/: commanderConfig.cmake
devel/share/simulation_environment/cmake/: simulation_environmentConfig.cmake
src/Navigation_Robot/commander/: CMakeLists.txt  package.xml
src/Navigation_Robot/commander/launch/: mapping.launch  viz.launch
src/Navigation_Robot/commander/src/: navigation_robot_viz.cpp
src/Navigation_Robot/simulation_environment/: CMakeLists.txt  package.xml
src/Navigation_Robot/simulation_environment/launch/: 3DNavigation.launch
src/Navigation_Robot/simulation_environment/models/Navigation_Robot/: Navigation_robot.gazebo  macros.xacro  materials.xacro  navigation_robot.xacro  parameters.xacro
src/Navigation_Robot/simulation_environment/urdf/: r2w.xacro
src/Navigation_Robot/simulation_environment/worlds/: 3DWorld1.world  3DWorld2.world  3DWorld3.world  3DWorld4.world  Complex_Maze.world  Complex_Maze_1.world  Complex_Maze_2.world  Complex_Maze_3.world  First_try.world  Maze.world  second_try.world
